# quicknote

./: .gitignore  CMakeLists.txt  QuickNote.pro  README.md  editor.cpp  editor.h  main.cpp  quicknote_show  translations.cpp  translations.h
